# software_cost_estimation

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: estimate_with_cocomo_ii.py
software_cost_estimation/: __init__.py
software_cost_estimation/core/: __init__.py  base_model.py  constants.py  types.py  validators.py
software_cost_estimation/models/: __init__.py
software_cost_estimation/models/cocomo_ii/: __init__.py  model.py  parameters.py  utils.py
software_cost_estimation/utils/: __init__.py
tests/: test_cocomo_ii.py
